# CognitiveRoboticsMF

./: .gitignore  README.md  build_additional_dataset.py  build_dataset.py  create_image_features.py  cross_validation_example.py  cross_validation_for_al_mf.py  cross_validation_for_al_mf_intermediate_updates.py  cross_validation_for_non_al_mf.py  final_general_functions.py  final_mf_all_image_features.py  final_mf_vfh_and_all_image_features.py  final_mf_vfh_features.py  jobscript  jobscript_all_image_features  jobscript_test_al  jobscript_vfh_and_all_image_features  jobscript_vfh_features  load_dataset.py  mondrian_forest_classifier_with_al_strategy.py  mrmr_feature_selection.py  mrmr_feature_selection_2.py  mrmr_feature_selection_3.py  requirements.txt  rf_hyperparam_search.py  run_exec.py  train_svm.py  utils.py
CPP/: CMakeLists.txt  main.cpp
final_result_scripts/: mf_all_image_features.py  mf_vfh_and_all_image_features.py  mf_vfh_features.py
mondrianForest/: active_learning.py  jobscript_test_al  trying.py
